--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,4 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: var(--font), Arial, Helvetica, sans-serif;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    padding: 30px;
+    background-image: linear-gradient(to right, #6a82fb, #fc5c7d);
 }
